Knowledge overview: fix styles on mobile

--- a/anatomy/static/sass/_global.sass
+++ b/anatomy/static/sass/_global.sass
@@ -138,13 +138,12 @@ div#footer
 .label-clickable
   cursor: pointer
 
-.nav 
-  margin-bottom: -30px
-
 .nav-tabs > li > a
   color: #fff
-  h2
-    margin: 0
+
+.nav-tabs h2
+  margin: 0
+  margin-bottom: 0
 
 .nav-tabs > li > a:hover, .nav-tabs > li > a:focus
   color: #000
